--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-.App{
+.App {
     margin: 1rem;
-    font-family: Arial, Arial, Helvetica, sans-serif;
-}
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
