--- a/src/components/Heroes/Heroes.css
+++ b/src/components/Heroes/Heroes.css
@@ -1,61 +1,52 @@
-[class*='col-'] {
-    float: left;
-    padding-right: 20px;
-    padding-bottom: 20px;
-}
-[class*='col-']:last-of-type {
-    padding-right: 0;
-}
-a {
-    text-decoration: none;
-}
-*, *:after, *:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-h3 {
-    text-align: center; margin-bottom: 0;
-}
-h4 {
-    position: relative;
-}
-.grid {
-    margin: 0;
-}
-.col-1-4 {
-    width: 25%;
-}
-.module {
-    padding: 20px;
-    text-align: center;
-    color: #eee;
-    max-height: 120px;
-    min-width: 120px;
-    background-color: #607D8B;
-    border-radius: 2px;
-}
-.module:hover {
-    background-color: #EEE;
+/* HeroesComponent's private CSS styles */
+.heroes {
+    margin: 0 0 2em 0;
+    list-style-type: none;
+    padding: 0;
+    width: 15em;
+  }
+  .heroes li {
     cursor: pointer;
-    color: #607d8b;
-}
-.grid-pad {
-    padding: 10px 0;
-}
-.grid-pad > [class*='col-']:last-of-type {
-    padding-right: 20px;
-}
-@media (max-width: 600px) {
-    .module {
-        font-size: 10px;
-        max-height: 75px; }
-}
-@media (max-width: 1024px) {
-    .grid {
-        margin: 0;
-    }
-    .module {
-        min-width: 60px;
-    }
-}
+    position: relative;
+    left: 0;
+    background-color: #EEE;
+    margin: .5em;
+    padding: .3em 0;
+    height: 1.6em;
+    border-radius: 4px;
+  }
+  .heroes li:hover {
+    color: #2c3a41;
+    background-color: #e6e6e6;
+    left: .1em;
+  }
+  .heroes li.selected {
+    background-color: #172024;
+    color: white;
+  }
+  .heroes li.selected:hover {
+    background-color: #505050;
+    color: white;
+  }
+  .heroes li.selected:active {
+    background-color: black;
+    color: white;
+  }
+  .heroes .badge {
+    display: inline-block;
+    font-size: small;
+    color: white;
+    padding: 0.8em 0.7em 0 0.7em;
+    background-color:#405061;
+    line-height: 1em;
+    position: relative;
+    left: -1px;
+    top: -4px;
+    height: 1.8em;
+    margin-right: .8em;
+    border-radius: 4px 0 0 4px;
+  }
+  
+  input {
+    padding: .5rem;
+  }
